--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,25 @@ main{
     display: flex;
     justify-content: space-around;
 }
+
+.color-section{
+    background-color: aliceblue;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 8px;
+    padding-left: 8px;
+    border-radius: 8px;
+}
+
+.text-center {
+    text-align: center;
+}
+
+#result {
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+}
 footer{
     text-align: center;
 }
