--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,13 @@ main{
 
 input[type=text], select {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 20px 20px;
+    margin: 8px 8px;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    
   }
 
 button {
@@ -20,7 +21,9 @@ button {
     background-color: blue;
     padding: 8px;
     border-radius: 4px;
+    align-center;
 }
+
 .color-section{
     background-color: aliceblue;
     padding-top: 8px;
@@ -39,6 +42,7 @@ button {
     font-weight: bold;
     text-align: center;
 }
+
 footer{
     text-align: center;
 }
